--- a/arabic-flashcards/src/css/home.css
+++ b/arabic-flashcards/src/css/home.css
@@ -1,3 +1,7 @@
+:root {
+    --bg-url: none
+}
+
 #home-body {
     width: 100vw;
     height: 100vh;
@@ -5,4 +9,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: var(--bg-url);
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 0 1000px rgba(233, 214, 216, .6);
 }
