--- a/arabic-flashcards/client/src/css/card.css
+++ b/arabic-flashcards/client/src/css/card.css
@@ -109,3 +109,46 @@
 	filter: url("#noise");
 }
 
+.add-card-body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.new-word-field {
+    height: 15%;
+    width: 60%;
+}
+
+#password-row {
+    width: 50%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.password-field {
+    width: 65%;
+    height: 100%;
+    display: block;
+}
+
+.add-word-button {
+    width: 30%;
+    height: 100%;
+    border: none;
+    margin: none;
+    padding: none;
+    display: block;
+}
+
+.password-field, .new-word-field, .add-word-button {
+    background-image: linear-gradient(#f8F2F2, #ead9d6);
+    border-radius: 2px;
+    box-shadow: 1px 2px 2px rgba(var(--brown-dark), .2);
+    border: none;
+    text-align: center;
+}
