--- a/arabic-flashcards/client/src/css/card.css
+++ b/arabic-flashcards/client/src/css/card.css
@@ -151,4 +151,9 @@
     box-shadow: 1px 2px 2px rgba(var(--brown-dark), .2);
     border: none;
     text-align: center;
+    outline: none;
+}
+
+.password-field:focus, .new-word-field:focus {
+    outline: none;
 }
